--- a/css/style.css
+++ b/css/style.css
@@ -347,13 +347,19 @@ main{
     grid-auto-rows: 20rem;
     padding: 1rem;
     grid-gap: 10px;
+    overflow: hidden;
 }
 
 .galeria__img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
 
+
+.galeria__img:hover{
+    object-fit: contain;
+    filter: drop-shadow(rgb(6, 3, 12) 5px 5px);
 }
 
 .galeria__item:nth-child(1){
@@ -385,10 +391,6 @@ main{
 
 
 /**********Formulario de contacto************/
-
-.logoContacto{
-
-}
 
 .container__contacto{
     display: grid;
