--- a/css/style.css
+++ b/css/style.css
@@ -99,73 +99,32 @@ main{
     border-radius: 5%;
 }
 
-.img1{grid-area: img1;}
-.txt1{grid-area: txt1;}
-.img2{grid-area: img2;}
-.txt2{grid-area: txt2;}
 
 
-.text{
-    padding: 1rem;
-    font-size: 3rem; 
-    color: white;
-    text-align: center;
+/***********productos***********/
+
+
+.listaCaracteristicas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40rem;
+    background-image: url(../assets/fondoproductos.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.textoEnGrid{  /*Centrado de elementos dentro de contenedores*/
-    justify-self: center;
-    align-self: center;
-    color: black;
+.listaCaracteristicas--particulares{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.textoEnGrid--claro{  /*Centrado de elementos dentro de contenedores*/
-    justify-self: center;
-    align-self: center;
-    color: rgb(137, 129, 180);
-}
 
-.imagenAncho100{
+.imgProducto{
+    height: 70%;
     width: 100%;
-    padding: .5rem;
-    border-radius: 5%; 
 }
-
-
-/***********productos section grid***********/
-
-.container__producto{
-    display: grid;
-    background: rgb(235,236,242);
-    background: linear-gradient(180deg, rgba(235,236,242,1) 0%, rgba(255,255,255,1) 27%, rgba(220,220,221,1) 49%, rgba(127,127,130,1) 83%, rgba(0,0,0,1) 100%);
-    grid-template-columns: 40% 20% 40%; 
-    grid-template-rows: repeat(7, auto); 
-    gap: 0% 0%; 
-    grid-template-areas: 
-        "articulo1 articulo1 articulo1"
-        "imgprincipal1 imgprincipal1 imgprincipal1"
-        "imagensec1 imagensec1 caracteristicas1"
-        "lineah lineah lineah"
-        "articulo2 articulo2 articulo2"
-        "imagenprincipal2 imagenprincipal2 imagenprincipal2"
-        "caracteristicas2 imagensec2 imagensec2"; 
-}
-
-.articulo1 {grid-area: articulo1; }
-.imgprincipal1 {grid-area: imgprincipal1; }
-.imagensec1 {grid-area: imagensec1;  }
-.caracteristicas1 { grid-area: caracteristicas1; }
-.lineah {
-    grid-area: lineah;
-    height: .5rem;
-    border: 0;
-    margin: .5rem 0;
-    background: rgb(16,36,134);
-    background: linear-gradient(160deg, rgba(16,36,134,1) 4%, rgba(32,37,37,1) 53%, rgba(22,23,23,1) 82%, rgba(0,0,0,1) 100%);
-}
-.articulo2 { grid-area: articulo2; }
-.imagenprincipal2 { grid-area: imagenprincipal2; }
-.imagensec2 { grid-area: imagensec2; }
-.caracteristicas2 { grid-area: caracteristicas2; }
 
 
 /***********soluciones section grid***********/
@@ -367,15 +326,6 @@ footer div a img{
         font-size: 1.5rem;
     }
     
-    .container__index{ 
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-areas:
-        "img1"
-        "txt1"
-        "img2"
-        "txt2";
-    }
 
     .container__producto{
         grid-template-columns: 100%; 
