--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ header ul li:hover{
 }
 
 
-
 header nav ul li a:hover{
     color: rgba(153, 153, 161, 0.664);
 }
@@ -51,13 +50,9 @@ main{
     flex-direction: column;
     font-family: 'koulen';
     display: block;
+    margin-top: 6rem;
 }
 
-.h1__titulo{
-    background-color: black;
-    color: white;
-    padding-left: 2rem;
-}
 
 /*******hero**********/
 
@@ -124,18 +119,14 @@ main{
 .imgProducto{
     height: 70%;
     width: 100%;
+    border-radius: 5%;
 }
 
 
-/***********soluciones section grid***********/
+/***********soluciones section***********/
 
-.container__solucion{
-    display: grid;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(31,32,65,1) 29%, rgba(31,32,65,1) 67%, rgba(0,0,0,1) 100%);
-    grid-template-columns: 1fr 1fr;
-    gap: 0rem 0rem;
-}
+
+
 
 /***********Clientes section grid***********/
 
@@ -175,16 +166,6 @@ main{
     font-size: 4rem;
     color: black;
     text-align: center;
-}
-
-.lista__vertical{
-    font-size: 2rem;
-    text-transform: uppercase;
-}
-
-.lista__vertical--elemento{
-    display: block; 
-    text-decoration: none;   
 }
 
 
