--- a/sass/partial/_variables.scss
+++ b/sass/partial/_variables.scss
@@ -3,3 +3,9 @@ $texttableth: 8px;
 $texttabletv: 6px;
 $textmovil: 5px;
 
+$tema:(
+    fuentetitulos: 'koulen', 
+    colorfondo: #212529,
+    colornav: #0D6EFD,
+)
+
