--- a/sass/partial/_body.scss
+++ b/sass/partial/_body.scss
@@ -1,4 +1,3 @@
 body{
-    background: rgb(47,48,47);
-    background: linear-gradient(160deg, rgba(47,48,47,1) 4%, rgba(32,37,37,1) 53%, rgba(22,23,23,1) 82%, rgba(21,49,113,1) 100%);
+    background: map-get($tema, colorfondo)
 }
