--- a/sass/partial/_clientes.scss
+++ b/sass/partial/_clientes.scss
@@ -1,13 +1,13 @@
 .contenedorClientes{
     height: 18rem;
     
-    .galeria__img{
+    &__galeriaImg{
         width: 99%;
         height: 99%;
         object-fit: cover;
     }
     
-    .galeria__img:hover{
+    &__galeriaImg:hover{
         object-fit: contain;
         filter: drop-shadow(rgb(6, 3, 12) 5px 5px);
     }
