--- a/sass/partial/_hero.scss
+++ b/sass/partial/_hero.scss
@@ -1,25 +1,31 @@
 .hero{
     position: relative;
-    &Titulo{
+    &__titulo{
         position: absolute;
         left: 10px;
         bottom: 5rem;
         color: white;
         font-size: 5rem;
         font-weight: normal;
-        @include movil {
-            font-size: 3rem;
+        @include desktop{
+            font-size: 4rem;
+        }
+        @include tableth {
+            font-size: 2.5rem;
         }
     }
-    &Subtitulo{
+    &__subtitulo{
         position: absolute;
         left: 10px;
         bottom: 2.5rem;
         color: white;
         font-size: 3rem;
         font-weight: normal;
-        @include movil {
-            font-size: 1.5rem;
+        @include desktop{
+            font-size: 2rem;
+        }
+        @include tableth {
+            font-size: 1rem;
         }
     }
 }
