ÃÃEntrega SEO mas SASS en todo el sitio

--- a/sass/partial/_footer.scss
+++ b/sass/partial/_footer.scss
@@ -3,6 +3,7 @@ footer{
     display: flex;
     justify-content: space-between;
     color: white;
+    background: linear-gradient(180deg, rgba(33,37,41,1) 0%, rgba(13,110,253,1) 100%);
     font: map-get($tema, fuentetitulos);
     .animacionFooter:hover{
       animation:  text-focus-in 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;    
@@ -10,14 +11,18 @@ footer{
     a{
       img{
           padding: 0.2rem;
-          height: 3rem;
+          height: 3.5rem;
           filter: invert(1);
           @include tableth {
-            height: 2rem;
+            height: 3rem;
+          }
+        }
+        .footer__logo{
+          width: 10rem;
+          height: 10rem;
         }
       }
-    }
-}
+  }
 
 
 /*Animista*/
