--- a/css/style.css
+++ b/css/style.css
@@ -25,27 +25,27 @@ body {
 header {
   font-family: "koulen";
   font-size: 1.5rem; }
-  header nav .header__logo {
-    width: 4rem;
-    height: 4rem;
-    filter: invert(1); }
-  header nav .navcolor {
-    background-color: #0D6EFD; }
-  @media screen and (max-width: 320px) {
-    header nav {
-      justify-content: center; } }
-  header nav ul {
-    /** li:hover{
-                background-color: rgba(2, 2, 19, 0.288);
-            }**/ }
-    header nav ul li {
-      border-radius: 10%; }
-      header nav ul li a:hover {
-        color: rgba(153, 153, 161, 0.664); }
+  header nav {
+    background: linear-gradient(0deg, #212529 0%, #0d6efd 100%); }
+    header nav .header__logo {
+      width: 4rem;
+      height: 4rem;
+      filter: invert(1); }
+    @media screen and (max-width: 320px) {
+      header nav {
+        justify-content: center; } }
+    header nav .dropdown:hover .dropdown-menu {
+      display: block;
+      margin-top: 0; }
 
 main {
   font-family: "koulen";
   margin-top: 6rem; }
+  main .titulo__pagina {
+    color: #212529;
+    background: radial-gradient(circle, #0d6efd 0%, #19417a 30%, #212529 69%, #212529 100%);
+    opacity: 0.7;
+    text-align: center; }
 
 .hero {
   position: relative; }
@@ -78,11 +78,31 @@ main {
 
 .containerIndex {
   display: flex;
-  justify-content: center;
-  height: 40vw; }
+  justify-content: center; }
   .containerIndex .imgCarouselIndex {
-    height: 40vw;
     border-radius: 5%; }
+  .containerIndex__titulo {
+    font-size: 3rem; }
+    @media screen and (max-width: 768px) {
+      .containerIndex__titulo {
+        font-size: 2rem; } }
+    @media screen and (max-width: 575px) {
+      .containerIndex__titulo {
+        font-size: 1.5rem; } }
+    @media screen and (max-width: 480px) {
+      .containerIndex__titulo {
+        display: none; } }
+  .containerIndex__subtitulo {
+    font-size: 2rem; }
+    @media screen and (max-width: 768px) {
+      .containerIndex__subtitulo {
+        font-size: 1.5rem; } }
+    @media screen and (max-width: 575px) {
+      .containerIndex__subtitulo {
+        font-size: .75rem; } }
+    @media screen and (max-width: 320px) {
+      .containerIndex__subtitulo {
+        font-size: .5rem; } }
 
 .listaCaracteristicas {
   display: flex;
@@ -146,16 +166,20 @@ footer {
   display: flex;
   justify-content: space-between;
   color: white;
+  background: linear-gradient(180deg, #212529 0%, #0d6efd 100%);
   font: "koulen"; }
   footer .animacionFooter:hover {
     animation: text-focus-in 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53) both; }
   footer a img {
     padding: 0.2rem;
-    height: 3rem;
+    height: 3.5rem;
     filter: invert(1); }
     @media screen and (max-width: 575px) {
       footer a img {
-        height: 2rem; } }
+        height: 3rem; } }
+  footer a .footer__logo {
+    width: 10rem;
+    height: 10rem; }
 
 /*Animista*/
 @keyframes text-focus-in {
