--- a/sass/partial/_html.scss
+++ b/sass/partial/_html.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 *{
     margin: 0;
