--- a/sass/partial/_main.scss
+++ b/sass/partial/_main.scss
@@ -1,4 +1,10 @@
 main{
     font-family: map-get($tema, fuentetitulos);
     margin-top: 6rem;
+    .titulo__pagina{
+        color: map-get($tema, colorfondo);
+        background: map-get($tema, colortitulo);
+        opacity: 0.7;
+        text-align: center;
+    }
 }
