--- a/sass/partial/_variables.scss
+++ b/sass/partial/_variables.scss
@@ -7,5 +7,6 @@ $tema:(
     fuentetitulos: 'koulen', 
     colorfondo: #212529,
     colornav: #0D6EFD,
+    colortitulo: radial-gradient(circle, rgba(13,110,253,1) 0%, rgba(25,65,122,1) 30%, rgba(33,37,41,1) 69%, rgba(33,37,41,1) 100%),
 )
 
